Archive2/71/55676707352406/output
main.cpp:1:2: error: 'cat' does not name a type
  cat /Archive2/bc/ff35f9f8b6b836/main.cpp
  ^
