Archive2/71/55676707352406/main.cpp
 cat /Archive2/bc/ff35f9f8b6b836/main.cpp
 